# easy_newtypes

./: Cargo.toml
src/: arith.rs  lib.rs
